# Boost-Serial-Port

./: .gitignore  BoostSerial.cpp  BoostSerial.h  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: BoostSerial.h
sample/: ByteTerminal.cpp  StringTerminal.cpp
src/: BoostSerial.cpp
test/: gtest.cpp
unit/: CMakeLists.txt  gtest.cpp
